--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+spring.datasource:
+  driver-class-name: org.h2.Driver
+  url: jdbc:h2:mem:test;DATABASE_TO_UPPER=false;DATABASE_TO_LOWER=TRUE;MODE=MySQL
+  username: user
+  password: user
+
 # MyBatisの設定
 mybatis:
   # SQLを記載したXMLファイルの格納場所。ここではsrc/main/resources/db/mappersの下を指定
