--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,3 +1,5 @@
+# テストコード用設定
+
 spring.datasource:
   driver-class-name: org.h2.Driver
   url: jdbc:h2:mem:test;DATABASE_TO_UPPER=false;DATABASE_TO_LOWER=TRUE;MODE=MySQL
