パッケージ名変更 repository -> dataaccess

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,7 +9,7 @@ spring.datasource:
 # MyBatisの設定
 mybatis:
   # xmlで使うタイプ（ResultType、ParameterType）のパッケージ名を省略できるよう設定
-  type-aliases-package: jp.co.acesystems.mybatissample.repository
+  type-aliases-package: jp.co.acesystems.mybatissample.dbaccess
   # SQL項目(主にSELECT句)のアンダースコアをキャメルケースに変換して自動マッピングするための設定
   configuration:
     map-underscore-to-camel-case: true
